Incorporate findbugs low/mediumum recommendations.
Added static serialVersionUID to serializable classes.
Replaced inefficient keySet() iterator and map.get(key) with entrySet() iterator.
Removed redundant null checks.


svn path=/trunk/; revision=1493